# python-interview

./: .gitignore  README.md  pyproject.toml
data/: cities.json
questions/: __init__.py  bug1.py  bug2.py  q01_top10_biggest_cities.py  q05_version.py  question1.py  question2.py  question3.py  question4.py  question5.py  question6.py
questions/helpers/: distance.py  paths.py
tests/: test_questions.py
